# tinyaleph-py

./: .gitignore  README.md  basemodel.txt  clean_dataset.py  compare_attention.py  csv_to_parquet.py  pyproject.toml  requirements.txt  symbols.csv  training_data.txt
apps/: __init__.py
apps/ecdsa_ai/: __init__.py  agent.py  automation.py  curve.py  datasets.py  encodings.py  hnp.py  logging.py  methods.py  report.py  run.py  validate.py
apps/llm_fusion/: README.md  __init__.py  config.py  demo_llama.py  fusion_layers.py  inference.py  kuramoto_attention.py  prime_embeddings.py  quaternion_layers.py  train.py  train_fusion.py  wrappers.py
apps/reso_llm/: README.md  benchmark_comparison.py  chat.py  config.py  configure_training.py  data_sources.py  dataset.py  demo.py  evaluate.py  evaluation_harness.py  inference.py  input_templates.py  model.py  template_dataset.py  test_compatibility.py  test_evaluation_harness.py  test_input_templates.py  tokenizer.py  train.py  train_and_evaluate.py  train_sentient.py  training_config_default.json  training_templates.py  ui_sentient.py  verify_fusion.py
apps/resoformer/: README.md  __init__.py  demo.py  generator.py  model.py  pytorch_model.py  tokenizer.py  torch_backend.py  train_hf.py  train_production.py  train_pytorch.py  train_quick.py  train_scaled.py  train_scaled_bpe.py  trainer.py
apps/semantic_premodel/: README.md  __init__.py  builder.py  cli.py  config.py  io.py  landscape.py  mirror.py  refine.py
docs/: index.md  llm_fusion_reference.md  reference_guide.md  reso_llm_reference.md  semantic_premodel_reference.md  users_guide.md
examples/: 01_hello_world.py  02_quantum_operators.py  03_quaternion_rotations.py  04_kuramoto_synchronization.py  05_holographic_memory.py  06_entanglement_networks.py  07_sedenion_memory_field.py  08_prsc_semantic_binding.py  09_ml_attention_mechanisms.py  10_aleph_engine_runtime.py  11_symbolic_hexagrams.py  12_advanced_physics.py  13_cryptographic_backend.py  14_semantic_types.py  15_reduction_semantics.py  16_lambda_calculus.py  17_crt_homology.py  18_topology_physics.py  19_semantic_inference.py  20_resoformer_ml.py  README.md  atomic_simulation.py  collatz_verification.py
examples/ecdsa/: derivation.tex
notebooks/: 01_getting_started.ipynb  02_quaternions_and_rotations.ipynb  03_kuramoto_synchronization.ipynb  04_semantic_types.ipynb  05_aleph_engine.ipynb  06_resoformer_ml.ipynb  README.md
tests/: __init__.py  test_core.py  test_hilbert.py  test_ml.py  test_network.py  test_observer.py  test_physics.py  test_resonance.py  test_runtime.py
tinyaleph/: __init__.py
tinyaleph/backends/: __init__.py  cryptographic.py
tinyaleph/core/: __init__.py  complex.py  constants.py  fano.py  hypercomplex.py  primes.py  quaternion.py
tinyaleph/distributed/: __init__.py  transport.py
tinyaleph/engine/: __init__.py  aleph.py
tinyaleph/hilbert/: __init__.py  operators.py  state.py
tinyaleph/ml/: __init__.py  attention.py  resoformer.py  sparse_state.py
tinyaleph/network/: __init__.py  entanglement.py  identity.py
(+43 files in other folders)
