[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyaleph"
version = "0.1.0"
description = "Prime Resonance Computing Framework - Unified library for prime-resonant semantic computing, hypercomplex algebra, and quantum-inspired dynamics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sebastian Schepis" }
]
keywords = [
    "prime-numbers",
    "quaternions",
    "hypercomplex",
    "hilbert-space",
    "resonance",
    "semantic-computing",
    "quantum-inspired",
    "kuramoto",
    "entropy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "sympy>=1.12",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
    "aiohttp>=3.9.0",
    "msgpack>=1.0.7",
    "orjson>=3.9.10",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
gpu = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]

cuda = [
    "cupy>=12.0.0",
]

ml = [
    "torch>=2.1.0",
    "einops>=0.7.0",
    "transformers>=4.35.0",
]

distributed = [
    "ray>=2.8.0",
    "dask>=2023.11.0",
    "websockets>=12.0",
]

viz = [
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "networkx>=3.2",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.88.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "pre-commit>=3.5.0",
]

all = [
    "tinyaleph[gpu,ml,distributed,viz,dev]",
]

[project.urls]
Homepage = "https://github.com/sschepis/TinyAleph"
Documentation = "https://github.com/sschepis/TinyAleph#readme"
Repository = "https://github.com/sschepis/TinyAleph"

[tool.hatch.build.targets.wheel]
packages = ["tinyaleph"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["tinyaleph"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"